unpackaged/main/default/objects/CorrectiveInvoice__c/CorrectiveInvoice__c.object-meta.xml
<CustomObject>
    <label>Corrective Invoice</label>
    <nameField>
        <label>Corrective Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corrective Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>