unpackaged/main/default/objects/CorrectiveInvoice__c/fields/Corrective_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Invoice_Date__c</fullName>
    <label>Corrective Invoice Date</label>
    <type>Date</type>
</CustomField>