unpackaged/main/default/objects/CorrectiveInvoice__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; OriginalInvoiceId__c  ,  OriginalInvoice__c,&quot;_self &quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice</label>
    <type>Text</type>
</CustomField>