unpackaged/main/default/objects/CorrectiveInvoice__c/fields/OriginalInvoice__c.field-meta.xml
<CustomField>
    <fullName>OriginalInvoice__c</fullName>
    <label>Original Invoice</label>
    <length>32</length>
    <type>Text</type>
</CustomField>