unpackaged/main/default/objects/CorrectiveInvoice__c/fields/OriginalInvoiceId__c.field-meta.xml
<CustomField>
    <fullName>OriginalInvoiceId__c</fullName>
    <label>Original Invoice Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>