unpackaged/main/default/objects/CorrectiveInvoice__c/fields/PDFGenerationStatus__c.field-meta.xml
<CustomField>
    <fullName>PDFGenerationStatus__c</fullName>
    <label>PDF Generation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Posted To BLOB Storage</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>