unpackaged/main/default/objects/CorrectiveInvoice__c/fields/PreviousCorrectiveInvoice__c.field-meta.xml
<CustomField>
    <fullName>PreviousCorrectiveInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Corrective Invoice</label>
    <referenceTo>CorrectiveInvoice__c</referenceTo>
    <relationshipLabel>Corrective Invoices</relationshipLabel>
    <relationshipName>Corrective_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>